# pys2hat

./: Makefile.am  README  README.md  configure.ac  setup.py
pure_s2hat/: Makefile.am  README
pys2hat/: __init__.py  s2hat_pixeltype.c  s2hat_types.c
pyxpure/: pyc_pures2hat.c
s2hat/: Makefile.am  README  s2hat_f2c.h
